@@ -1,7 +1,5 @@
 package de.mephisto.vpin.server;
 
-import com.sun.jna.NativeLibrary;
-import de.mephisto.vpin.commons.StudioMediaPlayer;
 import de.mephisto.vpin.commons.utils.Updater;
 import de.mephisto.vpin.restclient.system.NVRamsInfo;
 import de.mephisto.vpin.restclient.system.ScoringDB;
@@ -12,7 +10,6 @@ import org.apache.commons.io.IOUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import java.awt.*;
 import java.io.File;
 import java.io.FileInputStream;
 import java.io.IOException;
@@ -20,15 +17,14 @@ import java.lang.invoke.MethodHandles;
 import java.nio.charset.Charset;
 import java.nio.file.Files;
 import java.util.*;
-import java.util.List;
 
 import static de.mephisto.vpin.server.system.SystemService.RESOURCES;
 
 public class ServerUpdatePreProcessing {
   private final static Logger LOG = LoggerFactory.getLogger(MethodHandles.lookup().lookupClass());
-  private final static List<String> deletions = Arrays.asList("PupPackScreenTweaker.exe");
+  private final static List<String> deletions = List.of("PupPackScreenTweaker.exe");
 
-  private final static List<String> jvmFiles = Arrays.asList("jinput-dx8_64.dll");
+  private final static List<String> jvmFiles = List.of("jinput-dx8_64.dll");
 
   private final static String GITHUB_RESOURCES_URL = "https://raw.githubusercontent.com/syd711/vpin-studio/main/resources/";
 
@@ -50,7 +46,6 @@ public class ServerUpdatePreProcessing {
     DOWNLOADS.put("competition-badges/wovp.png", GITHUB_RESOURCES_URL + "competition-badges/wovp.png");
     DOWNLOADS.put("frames/wheel-black.png", GITHUB_RESOURCES_URL + "frames/wheel-black.png");
     DOWNLOADS.put("frames/wheel-tarcissio.png", GITHUB_RESOURCES_URL + "frames/wheel-tarcissio.png");
-    DOWNLOADS.put("resources/vlc/", "https://download.videolan.org/pub/videolan/vlc/last/win64/vlc-3.0.23-win64.zip");
   }
 
   private final static Map<String, Long> PUP_GAMES = new HashMap<>();
@@ -80,7 +75,6 @@ public class ServerUpdatePreProcessing {
         runDOFTesterCheck();
         runPupGamesUpdateCheck();
         runDownloadableInstallationsCheck();
-        runVlcCheck();
         runDeletions();
 
 
@@ -89,27 +83,12 @@ public class ServerUpdatePreProcessing {
           synchronizeNVRams(false);
         }).start();
 
-        LOG.info("Finished resource updates check, took " + (System.currentTimeMillis() - start) + "ms.");
+        LOG.info("Finished resource updates check, took {}ms.", System.currentTimeMillis() - start);
       }
       catch (Exception e) {
         LOG.error("Server update failed: " + e.getMessage(), e);
       }
     }).start();
-  }
-
-  private static void runVlcCheck() {
-    try {
-      String vlcPath = new File(RESOURCES, "vlc/vlc-3.0.23/").getAbsolutePath();
-      // Add to library search path
-      NativeLibrary.addSearchPath("libvlc", vlcPath);
-      NativeLibrary.addSearchPath("libvlccore", vlcPath);
-      LOG.info("VLC player initialized.");
-
-      StudioMediaPlayer.runVLCCheck();
-    }
-    catch (Exception e) {
-      LOG.error("Failed to initialize VLC: {}", e.getMessage(), e);
-    }
   }
 
   private static void runDownloadableInstallationsCheck() {
@@ -120,7 +99,7 @@ public class ServerUpdatePreProcessing {
       if (key.endsWith("/")) {
         // Folder-based download: download zip and extract into folder
         File folder = new File(key);
-        if (!folder.exists() || folder.listFiles().length == 0) {
+        if (!folder.exists() || Objects.requireNonNull(folder.listFiles()).length == 0) {
           LOG.info("Starting installation of {}", url);
           folder.mkdirs();
           String fileName = new File(url).getName();
